Portfolio version updated v1.0

--- a/.eslintignore
+++ b/.eslintignore
@@ -2,4 +2,4 @@ app/about/page.tsx
 app/contact-form/page.tsx
 components/ThemeToggle.tsx
 pages/api/contact.ts
-
+components/ParticlesBackground.tsx
