--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,23 +3,23 @@
     "target": "ES2017",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
-    "skipLibCheck": true,
+    "skipLibCheck": true,  // Skips checking .d.ts files in node_modules, which helps with some type issues.
     "strict": true,
     "noEmit": true,
-    "esModuleInterop": true,
+    "esModuleInterop": true, // Allows ES6 modules to interoperate with CommonJS modules.
     "module": "esnext",
-    "moduleResolution": "node", // Changed from "bundler" to "node"
-    "resolveJsonModule": true,
+    "moduleResolution": "node", // Ensures module resolution works with Node.js-style modules.
+    "resolveJsonModule": true, // Allows importing JSON files as modules.
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true,
+    "incremental": true, // Speeds up compilation by creating incremental build information.
     "plugins": [
       {
-        "name": "next"
+        "name": "next" // Ensures Next.js-specific optimizations.
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"] // Allows absolute imports based on the root directory.
     }
   },
   "include": [
@@ -27,7 +27,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "nodemailer.d.ts" // Ensure your custom declaration file is included
+    "@types/**/*.d.ts",  // Include all custom type definitions in an @types folder if created.
+    "nodemailer.d.ts" // Ensures your custom declaration file is included directly if needed.
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"] // Excludes node_modules to avoid redundant type checks.
 }
